testing git commit

--- a/backbone.js/src/index.html
+++ b/backbone.js/src/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0047)http://backbonejs.org/examples/todos/index.html -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta charset="utf-8">
-        <title>Backbone.js Todos</title>
+        <title>Backbone.js Todos.</title>
           <link rel="stylesheet" href="http://backbonejs.org/examples/todos/todos.css">
           <body>
               
